fixed Adrian Alert caching

--- a/RecipeProjectMVC/Views/Shared/_Layout.cshtml
+++ b/RecipeProjectMVC/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-light blue-gradient scrolling-navbar">
 
         <!-- Navbar brand -->
-        <a class="navbar-brand active" href="/Home/Index"><i class="fas fa-utensils fa-2x"> Home</i></a>
+        <a class="navbar-brand active" href="/Home/Index"><i class="fas fa-utensils fa-2x white-text"> Home</i></a>
 
         <!-- Collapse button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
@@ -75,9 +75,6 @@
 
     </nav>
     <!--/.Navbar-->
-    <div>
-        @RenderBody()
-    </div>
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
@@ -88,6 +85,9 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.16/js/mdb.min.js"></script>
     <!-- My Scripts -->
     <script type="text/javascript" src="~/scripts/Animations.js"></script>
+    <div>
+        @RenderBody()
+    </div>
 
 
 
