--- a/RecipeProjectMVC/Views/Dashboard/dashboard.cshtml
+++ b/RecipeProjectMVC/Views/Dashboard/dashboard.cshtml
@@ -76,9 +76,7 @@
                 <!--Card content-->
                 <div class="card-body d-sm-flex justify-content-between">
                     <h4 class="mb-2 mb-sm-0 pt-1">
-                        <a href="https://mdbootstrap.com/docs/jquery/" target="_blank">Home Page</a>
-                        <span>/</span>
-                        <span>Dashboard</span>
+                        <span class="blue-grey-text font-weight-bold">Admin Dashboard</span>
                     </h4>
                     <form class="d-flex justify-content-center">
                         <!-- Default input -->
@@ -178,8 +176,18 @@
                                     <span class="badge badge-primary badge-pill pull-right">@Model.ShippedOrders.Count</span>
                                 </a>
                                 <a class="list-group-item list-group-item-action waves-effect">
-                                    Issues
-                                    <span class="badge badge-primary badge-pill pull-right">8</span>
+                                    @{if (Model.Alert == "Adrian Sighted!")
+                                        {
+                                            <span class="badge badge-danger badge-pill pull-right">@Model.Alert</span>
+                                            <span class="badge badge-danger badge-pill pull-right">@Model.TimeOfIncident</span>
+
+
+                                        }
+                                        else
+                                        {
+                                            <span class="badge badge-success badge-pill pull-right">@Model.Alert</span>
+                                        }
+                                    }
                                 </a>
                             </div>
                             <!-- List group links -->
