--- a/RecipeProjectMVC/Views/Dashboard/dashboard.cshtml
+++ b/RecipeProjectMVC/Views/Dashboard/dashboard.cshtml
@@ -1,4 +1,6 @@
 ﻿@model DashboardInfoVM
+@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<IdentityUser> SignInManager
 <!DOCTYPE html>
 <html lang="en">
 
@@ -43,7 +45,7 @@
     <header>
 
         <!-- Sidebar -->
-        <div class="sidebar-fixed position-fixed lighten-3">
+        <div class="sidebar-fixed position-fixed lighten-3" >
             <a class="logo-wrapper waves-effect">
                 <img src="http://lotsoffood.org/wp-content/uploads/2013/10/logoLarge.jpg" class="view overlay zoom img-fluid z-depth-1 rounded-circle" alt="">
             </a>
@@ -63,10 +65,19 @@
                 <a href="#" class="list-group-item list-group-item-action waves-effect">
                     <i class="fas fa-money-bill-alt mr-3"></i>Orders
                 </a>
-            </div>
+                @if (SignInManager.IsSignedIn(User)) {
+                
+                    <a asp-controller="Account" asp-action="Logout"class="list-group-item list-group-item-action waves-effect">
+                        <i class="fas fa-sign-out-alt mr-3"></i><span>Log out</span>
+                    </a>
+                
+                    }
+</div>
         </div>
-        <!-- Sidebar -->
-    </header>
+
+            
+            <!-- Sidebar -->
+        </header>
     <!--Main Navigation-->
     <!--Main layout-->
     <main class="pt-5 mx-lg-5">
@@ -101,7 +112,7 @@
                                 <!-- Table head -->
                                 <thead class="blue-grey lighten-4">
                                     <tr>
-                                        <th>#</th>
+                                        <th><i class="fas fa-align-justify"></i></th>
                                         <th>Customer Name</th>
                                         <th>Customer Email</th>
                                         <th>Date</th>
@@ -115,7 +126,7 @@
                                     {
 
                                         <tr>
-                                            <th scope="row">#</th>
+                                            <th scope="row"><i class="fas fa-child"></i></th>
                                             <td>@item.CustomerName</td>
                                             <td>@item.CustomerEmail</td>
                                             <td>@item.CreationDate</td>
@@ -139,7 +150,7 @@
                     <div class="card mb-4">
                         <!-- Card header -->
                         <div class="card-header text-center">
-                            Pie chart
+                            Customers Favorites
                         </div>
                         <!--Card content-->
                         <div class="card-body">
@@ -212,9 +223,10 @@
                                 <thead class="blue-grey lighten-4">
                                     <theader><h4>Top 5 Ordered Recipes</h4></theader>
                                     <tr>
-                                        <th>#</th>
+                                        <th><i class="fas fa-sort-numeric-up"></i></th>
                                         <th>Recipe</th>
                                         <th># of Orders</th>
+                                        <th></th>
 
                                     </tr>
                                 </thead>
@@ -227,17 +239,18 @@
 
                                         {
                                             counter++;
-                                                <tr onclick="routeToDetails(@Model.Top5OrderedRecipes[i].RecipeId)">
-                                           
-                                                    <th scope="row" >@counter.ToString()</th>
-                                                    <td>@Model.Top5OrderedRecipes[i].Label</td>
-                                                    <td>@Model.Top5OrderedRecipes[i].Count</td>
-                                                
-                                                </tr>
-                                                }
-                                                }
+                                            <tr>
 
-                                        </tbody>
+                                                <th scope="row">@counter.ToString()</th>
+                                                <td>@Model.Top5OrderedRecipes[i].Label</td>
+                                                <td>@Model.Top5OrderedRecipes[i].Count</td>
+                                                <td><a asp-controller="Home" asp-action="Details" asp-route-id="@Model.Top5OrderedRecipes[i].RecipeId"><i class="far fa-question-circle fa-lg"></i></a></td>
+
+                                            </tr>
+                                        }
+                                    }
+
+                                </tbody>
                                 <!-- Table body -->
                             </table>
                             <!-- Table  -->
@@ -258,7 +271,7 @@
                                 <thead class="blue lighten-4">
                                     <theader><h4>Top 5 Customers</h4></theader>
                                     <tr>
-                                        <th>#</th>
+                                        <th><i class="fas fa-sort-numeric-up"></i></th>
                                         <th>CustomerEmail</th>
                                         <th># of Orders</th>
 
@@ -282,8 +295,8 @@
 
                                         }
 
-                                        
-                                        
+
+
                                     }
 
                                 </tbody>
@@ -304,10 +317,13 @@
                     <!--Card-->
                     <div class="card">
                         <!-- Card header -->
-                        <div class="card-header">Line chart</div>
+                        <div class="card-header"> <i class="fab fa-gripfire"></i> Orders vs  Incidents <i class="fab fa-gripfire"></i></div>
                         <!--Card content-->
                         <div class="card-body">
                             <canvas id="lineChart"></canvas>
+
+                            <h6 class="card-footer">Pearson's Correlation: @Model.IncidentsToOrdersPearsonsCorrelation <br> Spearman's Correlation: @Model.IncidentsToOrdersSpearmansCorrelation</h6>
+
                         </div>
                     </div>
                     <!--/.Card-->
@@ -364,7 +380,7 @@
                     <!--Card-->
                     <div class="card">
                         <!-- Card header -->
-                        <div class="card-header">Google map</div>
+                        <div class="card-header">Animal Tracker</div>
                         <!--Card content-->
                         <div class="card-body">
                             <!--Google map-->
@@ -1165,9 +1181,9 @@
         var myPieChart = new Chart(ctxP, {
             type: 'pie',
             data: {
-                labels: ["Red", "Green", "Yellow", "Grey", "Dark Grey"],
+                labels: ["Braised Chicken Gumbo", "Chicken Marsala", "Chicken Vesuvio", "Chicken & peppers", "Kreplach (Chicken Dumplings)"],
                 datasets: [{
-                    data: [300, 50, 100, 40, 120],
+                    data: [5, 4, 2, 1, 1],
                     backgroundColor: ["#F7464A", "#46BFBD", "#FDB45C", "#949FB1", "#4D5360"],
                     hoverBackgroundColor: ["#FF5A5E", "#5AD3D1", "#FFC870", "#A8B3C5", "#616774"]
                 }]
@@ -1184,27 +1200,27 @@
         var myLineChart = new Chart(ctxL, {
             type: 'line',
             data: {
-                labels: ["January", "February", "March", "April", "May", "June", "July"],
+                labels: ["June", "July", "August", "September", "October", "November", "December"],
                 datasets: [{
-                    label: "My First dataset",
+                    label: "Orders",
                     backgroundColor: [
-                        'rgba(105, 0, 132, .2)',
-                    ],
-                    borderColor: [
-                        'rgba(200, 99, 132, .7)',
-                    ],
-                    borderWidth: 2,
-                    data: [65, 59, 80, 81, 56, 55, 40]
-                },
-                {
-                    label: "My Second dataset",
-                    backgroundColor: [
-                        'rgba(0, 137, 132, .2)',
+                        'rgba(0, 137, 200, .3)',
                     ],
                     borderColor: [
                         'rgba(0, 10, 130, .7)',
                     ],
-                    data: [28, 48, 40, 19, 86, 27, 90]
+                    borderWidth: 2,
+                    data: [50, 60, 70, 40, 35, 20, 10]
+                },
+                {
+                    label: "Incidents",
+                    backgroundColor: [
+                        'rgba(200, 0, 20, 0.3)',
+                    ],
+                    borderColor: [
+                        'rgba(200, 99, 132, .7)',
+                    ],
+                    data: [0, 0, 0, 30, 35, 40, 50]
                 }
                 ]
             },
@@ -1274,7 +1290,7 @@
 
             var var_mapoptions = {
                 center: var_location,
-                zoom: 20
+                zoom: 12
             };
 
             var var_map = new google.maps.Map(document.getElementById("map-container-google-2"),
@@ -1327,7 +1343,7 @@
 
         }
         routeToDetails = (id) => {
-            location.href = `Home/Details/${id}`
+          //  location.href = `Home/Details/${id}`
         }
 
     </script>
