--- a/RecipeProjectMVC/Views/Home/Details.cshtml
+++ b/RecipeProjectMVC/Views/Home/Details.cshtml
@@ -2,7 +2,9 @@
 @{
     ViewBag.Title = "Details";
 }
-<input type="hidden" value='@ViewContext.RouteData.Values["id"]' id="routeDataId" />
+<input type="hidden" value='@Model.Id' id="routeDataId" />
+<script type="text/javascript" src="~/scripts/DetailsPieChart.js"></script>
+
 <h1>Details</h1>
 
 <div class="container wow bounceInLeft card" style="margin-top: 50px;">
@@ -33,7 +35,7 @@
                 <canvas id="pieChart" style="max-width: 1000px;"></canvas>
             </div>
             <!-- Button -->
-            <a asp-controller="Order" asp-action="Create" asp-route-id="@ViewContext.RouteData.Values["id"]" class="btn btn-primary float-left my-2">Order</a>
+            <a asp-controller="Order" asp-action="Create" asp-route-id="@Model.Id" class="btn btn-primary float-left my-2">Order</a>
         </div>
         <div class="row">
             <div class="col">
@@ -68,4 +70,3 @@
     </div>
 </div>
 <partial name="_Footer" />
-<script type="text/javascript" src="~/scripts/DetailsPieChart.js"></script>
